@@ -10,6 +10,7 @@ afpd_SOURCES = \
 	afp_avahi.c \
 	afp_config.c \
 	afp_dsi.c \
+	afp_mdns.c \
 	afp_options.c \
 	afp_util.c \
 	afp_zeroconf.c \
@@ -73,7 +74,7 @@ endif
 noinst_HEADERS = auth.h afp_config.h desktop.h directory.h fce_api_internal.h file.h \
 	 filedir.h fork.h icon.h mangle.h misc.h status.h switch.h \
 	 uam_auth.h uid.h unix.h volume.h hash.h acls.h acl_mappings.h extattrs.h \
-	 dircache.h afp_zeroconf.h afp_avahi.h
+	 dircache.h afp_zeroconf.h afp_avahi.h afp_mdns.h
 
 hash_SOURCES = hash.c
 hash_CFLAGS = -DKAZLIB_TEST_MAIN -I$(top_srcdir)/include
