@@ -14,7 +14,9 @@
 #include "afp_zeroconf.h"
 #include "afp_config.h"
 
-#ifdef HAVE_AVAHI
+#ifdef HAVE_MDNS
+#include "afp_mdns.h"
+#elif defined (HAVE_AVAHI)
 #include "afp_avahi.h"
 #endif
 
@@ -24,7 +26,11 @@
  */
 void zeroconf_register(const AFPConfig *configs)
 {
-#if defined (HAVE_AVAHI)
+#if defined (HAVE_MDNS)
+  LOG(log_debug, logtype_afpd, "Attempting to register with mDNS using mDNSResponder");
+
+	md_zeroconf_register(configs);
+#elif defined (HAVE_AVAHI)
   LOG(log_debug, logtype_afpd, "Attempting to register with mDNS using Avahi");
 
 	av_zeroconf_register(configs);
@@ -33,7 +39,10 @@ void zeroconf_register(const AFPConfig *configs)
 
 void zeroconf_deregister(void)
 {
-#if defined (HAVE_AVAHI)
+#if defined (HAVE_MDNS)
+  LOG(log_debug, logtype_afpd, "Attempting to de-register mDNS using mDNSResponder");
+	md_zeroconf_unregister();
+#elif defined (HAVE_AVAHI)
   LOG(log_debug, logtype_afpd, "Attempting to de-register mDNS using Avahi");
 	av_zeroconf_unregister();
 #endif
